--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Portafolio de Santiago Rivera, Desarrollador Web y Diseñador Creativo. Conoce mis proyectos y habilidades en desarrollo web.">
     <title>Mi Portafolio | Santiago Rivera</title>
     <link rel="icon" href="/assets/img/SRMARKETboxfavicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -47,17 +49,20 @@
     <header class="header bg-primary text-white text-center py-5">
         <div class="container">
             <h1>Bienvenido a Mi Portafolio</h1>
-            <p class="lead">Desarrollador Web y Diseñador Creativo</p>
+            <p class="lead">Soy Santiago Rivera, un apasionado Desarrollador Web y Diseñador Creativo dedicado a
+                transformar ideas en experiencias digitales únicas. Desde la creación de sitios web elegantes y
+                funcionales hasta el desarrollo de aplicaciones interactivas, estoy aquí para llevar tu proyecto al
+                siguiente nivel.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-4 custom-btn">Conversemos</a>
             <div class="social-icons mt-4">
                 <a href="https://www.facebook.com" class="text-white mx-2" target="_blank"><i
-                        class="fab fa-facebook fa-2x"></i></a>
+                        class="fab fa-facebook fa-1x"></i></a>
                 <a href="https://www.instagram.com" class="text-white mx-2" target="_blank"><i
-                        class="fab fa-instagram fa-2x"></i></a>
+                        class="fab fa-instagram fa-1x"></i></a>
                 <a href="https://www.github.com" class="text-white mx-2" target="_blank"><i
-                        class="fab fa-github fa-2x"></i></a>
+                        class="fab fa-github fa-1x"></i></a>
                 <a href="https://www.linkedin.com" class="text-white mx-2" target="_blank"><i
-                        class="fab fa-linkedin fa-2x"></i></a>
+                        class="fab fa-linkedin fa-1x"></i></a>
             </div>
         </div>
     </header>
@@ -170,7 +175,6 @@
     <section id="projects" class="container mt-5">
         <h2 class="text-center mb-4">Proyectos</h2>
         <div class="row">
-            <!-- Proyecto 1 -->
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
                     <img src="/assets/img/tareass.png" class="card-img-top" alt="Aplicación de Gestión de Tareas">
@@ -218,7 +222,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Proyecto 2 -->
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
                     <img src="/assets/img/ecommercee.png" class="card-img-top" alt="Sitio Web de E-commerce">
@@ -264,7 +267,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Proyecto 3 -->
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
                     <img src="/assets/img/blogg.png" class="card-img-top" alt="Blog Personal con CMS">
