--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4 d-flex justify-content-center align-items-center">
-                                <img src="/assets/img/htmlcss.png" class="card-img move-on-hover"
+                                <img src="assets/img/htmlcss.png" class="card-img move-on-hover"
                                     alt="Imagen HTML y CSS">
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4 d-flex justify-content-center align-items-center">
-                                <img src="/assets/img/js.png" class="card-img move-on-hover" alt="Imagen JavaScript">
+                                <img src="assets/img/js.png" class="card-img move-on-hover" alt="Imagen JavaScript">
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4 d-flex justify-content-center align-items-center">
-                                <img src="/assets/img/react.png" class="card-img move-on-hover"
+                                <img src="assets/img/react.png" class="card-img move-on-hover"
                                     alt="Imagen React & Node.js">
                             </div>
                         </div>
@@ -177,7 +177,7 @@
         <div class="row">
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
-                    <img src="/assets/img/tareass.png" class="card-img-top" alt="Aplicación de Gestión de Tareas">
+                    <img src="assets/img/tareass.png" class="card-img-top" alt="Aplicación de Gestión de Tareas">
                     <div class="card-body">
                         <h5 class="card-title">Aplicación de Gestión de Tareas</h5>
                         <p class="card-text">
@@ -224,7 +224,7 @@
             </div>
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
-                    <img src="/assets/img/ecommercee.png" class="card-img-top" alt="Sitio Web de E-commerce">
+                    <img src="assets/img/ecommercee.png" class="card-img-top" alt="Sitio Web de E-commerce">
                     <div class="card-body">
                         <h5 class="card-title">Sitio Web de E-commerce</h5>
                         <p class="card-text">
@@ -269,7 +269,7 @@
             </div>
             <div class="col-md-4 mb-4 d-flex">
                 <div class="card flex-fill">
-                    <img src="/assets/img/blogg.png" class="card-img-top" alt="Blog Personal con CMS">
+                    <img src="assets/img/blogg.png" class="card-img-top" alt="Blog Personal con CMS">
                     <div class="card-body">
                         <h5 class="card-title">Blog Personal con CMS</h5>
                         <p class="card-text">
